# PW-FES

./: .gitignore  INSTALL.md  README.md  requirements.txt  setup_env.bat
FES/: CMakeLists.txt  main.cpp  stimulation.cpp  stimulation.h  stimulation_control  tcp_socket.cpp  tcp_socket.h
tensorflow/: train_lstm.ipynb
tensorflow/model/: task-classifier_scaler.h5
xsens/: CMakeLists.txt  Data_preparation.m  README.md  mtw_driver_imu  mtw_imu_main.cpp
xsens/include/: XsDataIMU6.h  logger.h  p_gettid.h  project.h
xsens/matlab data prep/: Data_Preparation.m  Tasks and xsens.docx
xsens/src/: findClosestUpdateRate.cpp  pstream_gettid.cpp
